# sexpfmt

./: .editorconfig  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  publish.yml  rust.yml
.zed/: settings.json
example/: cafe-order-1.in.sexp  cafe-order-1.out.sexp
script/: test.sh  test_impl.sh
src/: error.rs  lib.rs  main.rs  parser.rs  printer.rs  reader.rs  sexp.rs
test/: test001-cafe_order_1.sexp  test002-multiline_head.sexp  test003-various_bookends.sexp  test004-ast1.sexp  test006-error_2.sexp
test/.expect/: test001-cafe_order_1.sexp.out  test002-multiline_head.sexp.out  test004-ast1.sexp.out  test006-error_1.sexp.err  test006-error_2.sexp.err  test006-error_2.sexp.out
test/.results/: latest.txt
