[package]
name = "sexpfmt"
version = "0.2.1"
edition = "2024"
authors = ["Nikhil Idiculla <nikhilidiculla@gmail.com>"]
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
exclude = ["/.vscode", "/.github"]
description = "A command-line tool to format S-expressions"
homepage = "https://github.com/tsnl/sexpfmt"

[dependencies]
nom = "7.1.1"
nom_locate = "4.1.0"
thiserror = "1.0"

[dev-dependencies]
stringreader = "0.1.1"
